# hDirDiff

./: hDirDiff.cabal
alt/: test.awk
src/: Main.hs
src/lib/: FileHash.hs  HashDiff.hs
