name:                hDirDiff
version:             0.1.0.0
synopsis:            Directory difference between 2 directory with md5sum format checksums.
-- homepage:            https://github.com/gamelost/alldice
license:             Apache-2.0
license-file:        LICENSE
author:              Anja Berens
maintainer:          pharaun666@gmail.com
-- copyright:
category:            Filesystem
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

executable hdirdiff
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts -with-rtsopts=-T -threaded
  hs-source-dirs:      src
  extra-libraries:     pthread
  build-depends:       base >=4.5 && <4.8
                     , text
                     , bytestring
                     , pipes
                     , pipes-bytestring
                     , attoparsec
                     , pipes-attoparsec
                     , optparse-applicative
                     , containers
                     , transformers
