name:                hDirDiff
version:             0.1.0.0
synopsis:            Directory difference between 2 directory with md5sum format checksums.
-- homepage:            https://github.com/gamelost/alldice
license:             Apache-2.0
license-file:        LICENSE
author:              Anja Berens
maintainer:          pharaun666@gmail.com
-- copyright:
category:            Filesystem
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  exposed-modules:     FileHash
                     , HashDiff
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -rtsopts -threaded
  hs-source-dirs:      src/lib
  build-depends:       base >=4.5 && <4.8
                     , bytestring
                     , pipes
                     , pipes-bytestring
                     , attoparsec
                     , pipes-attoparsec
                     , containers
                     , transformers

executable hdirdiff
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -rtsopts -threaded
  hs-source-dirs:      src/bin
  build-depends:       base >=4.5 && <4.8
                     , bytestring
                     , pipes
                     , pipes-bytestring
                     , attoparsec
                     , pipes-attoparsec
                     , optparse-applicative
                     , containers
                     , transformers
                     , async
                     , hDirDiff

Test-Suite test-hdirdiff
  main-is:             Test.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -rtsopts -threaded
  hs-source-dirs:      src/bin
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.5 && <4.8
                     , bytestring
                     , pipes
                     , pipes-bytestring
                     , attoparsec
                     , pipes-attoparsec
                     , optparse-applicative
                     , containers
                     , transformers
                     , async
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , hDirDiff
